--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SERVER_URL=https://wuwyprdyua6f.usemoralis.com:2053/server
-NEXT_PUBLIC_APP_ID=3kPAnMILBCZy6IT8WvpoW8gmpanvLscm4jiBAJqf
+NEXT_PUBLIC_SERVER_URL=https://payzv9fo5kih.usemoralis.com:2053/server
+NEXT_PUBLIC_APP_ID=kcc7y5PIJR505tKG3EPyIzTV4h8hHsUeBWhfyeAl
