--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-moralis": "^1.2.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.5",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.9"
+    "eslint-config-next": "12.0.9",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   }
 }
